# health-agent

./: .gitignore  README.md  TODO.md
smart_health_agent/: .env.example  .garmin_tokens  .gitignore  CLEANUP_SUMMARY.md  CSV_IMPORT_FIX_SUMMARY.md  GARMIN_INTEGRATION.md  GARMIN_MCP_TODO.md  MORNING_REPORT_FEATURE.md  README.md  ROADMAP.md  SECURITY.md  TCM_INTEGRATION_SUMMARY.md  TCM_KNOWLEDGE_INGESTION.md  TODO.md  TREND_ANALYSIS_IMPLEMENTATION.md  UI_FIXES_SUMMARY.md  VISUALIZATION_SETUP.md  agent_tools.py  config.py  cronometer_parser.py  csv_debug_tool.py  database.py  debug_carbs.py  debug_food_data.py  enhance_mood_tracking.py  evaluation.py  evaluation_report_20250806_125736.json  evaluation_report_20250806_133000.json  garmin_mcp_adapter.py  garmin_utils.py  health_visualizations.py  import_current_test_data.py  llm_interface.py  migrate_database.py  mood_tracker_ui.py  mood_tracking.py  oauth1_token.json  oauth2_token.json  quick_carb_test.py  quick_csv_test.py  (+27 more)
smart_health_agent/documents/: test_doc.txt
smart_health_agent/garmin-mcp-server/: .env.example  .gitignore  .mcp-inspector.json  API_DOCUMENTATION.md  Dockerfile  INTEGRATION_GUIDE.md  LICENSE  README.md  claude-desktop-config-example.json  debug_sleep_timestamps.py  debug_stress.py  docker-compose.yml  fix_timezone_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  simple_server.py  test_docker_server.py  test_mcp_client.py  test_mcp_compliance.py  test_mcp_protocol.py  test_mcp_simple.py  test_mcp_tools.py  test_tools_list.py
smart_health_agent/garmin-mcp-server/examples/: claude_desktop_config.json  conversation_examples.md  mcp_inspector_config.json
smart_health_agent/garmin-mcp-server/src/garmin_mcp/: __init__.py  __main__.py  ai_optimization.py  auth.py  client_protocol.py  config.py  data_fetcher.py  exceptions.py  models.py  monitoring.py  server.py  utils.py  validation.py
smart_health_agent/garmin-mcp-server/tests/: test_ai_optimization.py  test_data_fetcher.py  test_monitoring.py  test_validation.py
smart_health_agent/test_docs/: test_medical_doc.txt
smart_health_agent/tests/: README.md  test_data_flow.py  test_garmin_fix.py  test_system_after_init.py  test_token_auth.py
smart_health_agent/vectorstore/table_references/: table1-page13.xlsx  table1-page14.xlsx  table1-page15.xlsx  table1-page2.xlsx  table1-page21.xlsx  table1-page22.xlsx  table1-page24.xlsx  table1-page29.xlsx  table1-page3.xlsx  table1-page32.xlsx  table1-page5.xlsx  table1-page6.xlsx  table1-page8.xlsx  table2-page2.xlsx  table2-page3.xlsx  table2-page5.xlsx  table2-page6.xlsx
