[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Garmin Connect health and fitness data"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Health Agent MCP Team", email = "contact@example.com" }
]
maintainers = [
    { name = "Health Agent MCP Team", email = "contact@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
keywords = ["mcp", "garmin", "health", "fitness", "api", "server"]
requires-python = ">=3.9"
dependencies = [
    # MCP Framework
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "typing-extensions>=4.0",
    
    # Garmin Integration
    "garminconnect>=0.2.0",
    "python-dotenv>=1.0.0",
    
    # HTTP Server & Security
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "authlib>=1.2.0",
    
    # Data Processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    
    # Utilities
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.0",
    "cachetools>=5.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",
    
    # Code Quality
    "black>=23.0.0",
    "isort>=5.12.0", 
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "bandit>=1.7.5",
    
    # Development Tools
    "pre-commit>=3.4.0",
    "mcp-inspector>=0.2.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
redis = [
    "redis>=5.0.0",
    "aioredis>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/garmin-mcp-server"
Documentation = "https://github.com/yourusername/garmin-mcp-server#readme"
Repository = "https://github.com/yourusername/garmin-mcp-server.git"
"Bug Tracker" = "https://github.com/yourusername/garmin-mcp-server/issues"

[project.scripts]
garmin-mcp-server = "garmin_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "garminconnect.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=src/garmin_mcp",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["src/garmin_mcp"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]